--- a/vignettes/Vignette.Rmd
+++ b/vignettes/Vignette.Rmd
@@ -30,14 +30,11 @@ knitr::opts_chunk$set(
 
 ## About `anvis`
 
-The `anvis` package was developed to automate the process of creating network visualizations. It generates styling for visual properties of networks to highlight the most relevant edges and nodes. In addition, the package can be used to create visualizations for multiple networks at once, allowing for easy comparison of similar networks. For creating visualizations this package relies on software that is popular for network visualization: [Cytoscape](https://cytoscape.org/) (accessed with `r Biocpkg("RCy3")`), and `r CRANpkg("igraph")`. Any user familiar with this software will be easily able to extend and customize the visualizations made with `netvis`.  ## For increased compatibility, networks and the added attributes (e.g. node size and edge color) can be exported in various formats. 
-
-To obtain the best results relatively small networks (< 150 nodes) should be used. For visualization of larger networks we refer users to the package `r Biocpkg("netbiov")`, as this package offers a variety of options aimed at visualization of large networks. 
-
-
-Add an “Introduction” section that serves as an abstract to introduce the objective, models, unique functions, key points, etc that distinguish the package from other packages in the same area. This is a requirement of Bioconductor package vignettes. It should include a short motivation for the package in general as well as motivation for inclusion of the package in Bioconductor. When relevant, a brief review and comparison of packages with similar functionality or scope should be provided either in the Introduction or in a separate dedicated vignette section.
+The `anvis` package was developed to automate the process of creating network visualizations. It generates styling for visual properties of networks to highlight the most relevant edges and nodes. In addition, the package can be used to create visualizations for multiple networks at once, allowing for easy comparison of similar networks. For creating visualizations this package relies on software that is popular for network visualization: [Cytoscape](https://cytoscape.org/) (accessed with `r Biocpkg("RCy3")`), and `r CRANpkg("igraph")`. Any user familiar with this software will be easily able to extend and customize the visualizations made with `netvis`. To provide the freedom to make visualizations with other software, `netvis` offers exports of networks and the added attributes (e.g. node size and edge color) in various common formats. To obtain the best results relatively small networks (< 150 nodes) should be used. For visualization of larger networks we refer users to the package `r Biocpkg("netbiov")`, as this package offers a variety of options aimed at visualization of large networks. 
 
 ## Installation
+
+For installation of the package run the following code:
 
 ```{r installation, eval=FALSE}
 if (!requireNamespace("BiocManager", quietly=TRUE))
