--- a/vignettes/Vignette.Rmd
+++ b/vignettes/Vignette.Rmd
@@ -35,10 +35,6 @@ The `anvis` package was developed to automate the process of creating network vi
 * Brief review of similar packages (create a list and discuss with Sanjee, possibly integrate this: For visualization of larger networks we refer users to the package `r Biocpkg("netbiov")`, as this package offers a variety of options aimed at visualization of large networks.)
 * short motivation of the package (copy from fellowship application)
 
-Paragraph of bioconductor guidelines for vignette introduction section:
-
-Add an “Introduction” section that serves as an abstract to introduce the objective, models, unique functions, key points, etc that distinguish the package from other packages in the same area. This is a requirement of Bioconductor package vignettes. It should include a short motivation for the package in general as well as motivation for inclusion of the package in Bioconductor. When relevant, a brief review and comparison of packages with similar functionality or scope should be provided either in the Introduction or in a separate dedicated vignette section.
-
 ## Installation
 
 For installation of the package run the following code:
@@ -50,21 +46,118 @@ BiocManager::install("anvis")
 ```
 
 
-## How to use - Basic example
+## Brief demonstration of core functionalities
 
-Here we will give some demonstrations. Start by loading the package.
+We will start by giving some demonstrations of the core functionalities of the 
+package. Start by loading the package.
 
 ```{r loading}
 library(anvis)
 ```
 
-## Brief introduction of example data
+### Input data
 
+`anvis` uses network data, which can be provided in multiple formats: 'graphNEL', 
+'igraph', list of dataframes, or adjacency matrix. Two example 
+datasets (`sepsis` and `paleo`) are integrated in the package and can be used for 
+trying out the functions of `anvis`. Here, we use `sepsis` to showcase 
+some key features. The `sepsis` dataset
+consists of multiple adjacency matrices that show how similar the levels of 
+selected proteins behave in different groups of hospital patients
+(run `?sepsis` for more info).
 
+The first matrix of `sepsis` looks as follows:
 
+```{r sepsis_demo}
+data1 <- sepsis[[1]]
+
+# Show only part of the data and round to 3 decimals 
+round(data1[1:15, 1:6], 3)
+
+```
+
+The above data shows partial correlations between protein levels. We will convert
+the adjacency matrix into an object of a network data class in one of the 
+following steps. 
+
+Before this, we group the proteins of our example dataset, since this can yield 
+more interesting visualizations later. In this case, we
+will assign proteins into groups based on their protein family (shared parts 
+of their name). 
+
+```{r create_groups}
+# Create a vector that holds the names of all proteins
+proteins <- colnames(data1)
+proteins
+
+# Assign a group label to each protein
+# We find multiple proteins that include "IL", "CCL", or "CXCL" in their name.
+#   These will be assigned their own group label
+groups <- dplyr::case_when(
+    stringr::str_starts(proteins, "IL") ~ "A", 
+    stringr::str_starts(proteins, "CCL") ~ "B", 
+    stringr::str_starts(proteins, "CXCL") ~ "C", 
+    TRUE ~ "D")  # All other proteins will be group "D"
+groups
+```
+
+### Preparing the network for visualization
+
+Before making a visualization, we need to add additional attributes to our data
+that will help with the visual styling of the network. `anvis` provides functions
+to automate this process. The function `adjToNetwork` creates a network from an adjacency
+matrix and adds additional attributes, the function `addVisAttrs` adds attributes
+to an existing network of type "graphNEL", "igraph", or list of dataframes.
+
+Since our example data is an adjacency matrix we will use `adjToNetwork` here. 
+Possible output types for the network are "graphNEL", "igraph", or list of 
+dataframes. Here we selected "igraph" as output type, since this will make it 
+easy to demonstrate which attributes have been added to the network. 
+
+```{r}
+# Create network from adjacency, add all attributes for visual styling, 
+#    incorporate group information.
+net1 <- adjToNetwork(adj_mats = data1, 
+                     node_attrs = "all", 
+                     edge_attrs = "all", 
+                     group_vec = groups,
+                     output_as = "igraph")
+
+# We chose to get an igraph object as output, below some info about this
+#   network object
+net1
+
+# get edge attributes
+igraph::list.edge.attributes(net1)
+
+# get node attributes
+igraph::list.vertex.attributes(net1)
+```
+
+We're left with a network that has a node for each protein and and edge to 
+represent all non-zero partial correlations between the proteins. The additional
+attributes that have been added for the edges are "width" and "color". These 
+were determined based on the partial correlation values. Nodes have additional 
+attributes "group", and "color" based on the groups they are assigned to, and 
+attribute "size" based on the sum of the edges that are connected to a node. 
+
+### Visualization of the network
+
+Once additional attributes have been added to a network, we make use of the 
+`anvis()` function to visualize it. `anvis()` offers a variety of options to 
+customize the visualization. In addition, it can use different software 
+(`r CRANpkg("igraph")`, and [Cytoscape](https://cytoscape.org/)) to generate the
+visualization, or export the final network in various different formats. For now,
+we make a basic visualization using the defaults (`igraph` will be used to 
+generate our output). Other options will be showcased later in this vignette. 
+
+```{r, fig.height=7}
+anvis(net1)
+```
 
 # Data preparation
 
+## Brief introduction of example data
 * adjacency matrix
 * edgelist can be used, by converting to to adjacency 
 
